# CALM

./: .gitignore  CMakeLists.txt  CalmClam.h  Chef.cpp  Chef.h  Func.cpp  Func.h  Kitchen.cpp  Kitchen.h  Makefile  README.md  myStruct.h
src/: CalmClam.h  Chef.cpp  Chef.h  Func.cpp  Func.h  Kitchen.cpp  Kitchen.h  Makefile  main.cpp  myStruct.h
